fix markdown not rendering + attempt to fix annoying whitespace rendering

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -37,7 +37,7 @@ body {
 
 pre {
   font-family:  'Inter Tight', sans-serif;
-  white-space: pre;
+  white-space: pre-wrap;
   margin: 0;
 }
 
